# git-squash-rs

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yaml
.trunk/: trunk.yaml
src/: main.rs
