[package]
name = "git-squash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
clap = { version = "4.4.8", features = ["derive", "wrap_help"] }
dialoguer = "0.11.0"
anyhow = "1.0.75"
git2 = "0.18.1"
log = "0.4.20"
ctrlc = "3.4.1"
console = "0.15.7"

[dev-dependencies]
tempdir = "0.3.7"
